--- a/StoreCS.DAL.Impl/StoreCS.DAL.Impl.csproj
+++ b/StoreCS.DAL.Impl/StoreCS.DAL.Impl.csproj
@@ -9,7 +9,9 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
   </ItemGroup>
 
 
